# Saju-Nara

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init_tables.py  0002_add_profile_is_representative.py  0003_add_profile_day_pillar.py  0004_add_daily_shares.py  0005_add_consultations.py
backend/core/: config.py  errors.py  exceptions.py  middleware.py  security.py
backend/db/: models.py  session.py
backend/dependencies/: __init__.py  auth.py  db.py
backend/engine/: __init__.py
backend/engine/analysis/: behavior_synthesizer.py  context_ranker.py  dynamics.py  life_domain_mapper.py  structure_patterns.py  synergy.py
backend/engine/calc/: calendar_converter.py  compatibility.py  dae_un.py  daily_flow.py  daily_fortune.py  day_master_strength.py  il_jin.py  models.py  saju.py  se_un.py  sin_sal.py  synastry.py  ten_gods.py  validation.py  yong_sin.py
backend/engine/data/: earthly_branches.py  heavenly_stems.py  timezone_history.py  wuxing.py
backend/engine/handlers/: calculate_saju.py  check_compatibility.py  convert_calendar.py  get_dae_un.py  get_daily_fortune.py  get_il_jin.py  get_un_flow.py  get_wol_un.py
backend/llm/: guard.py  prompts.py  rag_builder.py  reranker.py  writer.py
backend/llm/pipelines/: question.py  saju_report.py
backend/llm/prompts/: __init__.py  question.py  report.py
backend/rag/: __init__.py  db.py  embedding.py  ingest.py  providers.py  search.py
backend/rag/knowledge/: ilju.json  sin_sal.json  ten_gods.json  wuxing.json
backend/routers/: auth.py  cities.py  profiles.py  question.py  saju.py  share.py
backend/schemas/: daily.py  profile.py  question.py  report.py  saju.py  share.py
backend/scripts/: compute_strength_dist.py
backend/tests/: test_calendar.py  test_question_pipeline.py  test_saju.py  test_solar_terms.py
mcp-servers/saju-calc/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
mcp-servers/saju-calc/data/: timezone_history.py
mcp-servers/saju-calc/lib/: compatibility.py  dae_un.py  day_master_strength.py  dynamics.py  gyeok_guk.py  jakmeong.py  saju.py  se_un.py  sin_sal.py  solar_terms.py  structure_patterns.py  ten_gods.py  twelve_wun.py  validation.py  yong_sin.py
mcp-servers/saju-calc/tests/: test_calendar.py  test_saju.py  test_solar_terms.py
mcp-servers/saju-calc/tools/: analyze_name.py  calculate_saju.py  check_compatibility.py  convert_calendar.py  get_dae_un.py  get_un_flow.py
(+60 files in other folders)
