[project]
name = "saju-calc-mcp"
version = "0.1.0"
description = "사주팔자 계산 MCP 서버 - 순수 계산 엔진"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "ephem>=4.1.5",
    "korean-lunar-calendar>=0.3.1",
    "pytz>=2024.1",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
